retrieveUnpackaged/objects/Business_Solution__c.object
<CustomObject>
    <fields>
        <fullName>Assumptions_Dependencies__c</fullName>
        <label>Assumptions/Dependencies</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_Document_Attached__c</fullName>
        <label>Design Document Attached</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Detailed_Approach__c</fullName>
        <label>Detailed Approach</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objects_Affected__c</fullName>
        <label>Objects Affected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Approach__c</fullName>
        <label>Proposed Approach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Business Solutions</relationshipLabel>
        <relationshipName>Business_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resources_Required__c</fullName>
        <label>Resources Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Risks__c</fullName>
        <label>Risks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sandbox_Environment__c</fullName>
        <label>Sandbox Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Staging0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staging1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Config2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Business Solution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Pending</fullName>
        <columns>NAME</columns>
        <columns>Proposed_Approach__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Solution_Lead__c</columns>
        <columns>Sandbox_Environment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
        </filters>
        <label>All_Pending</label>
    </listViews>
    <listViews>
        <fullName>All_Winter_13</fullName>
        <columns>NAME</columns>
        <columns>Proposed_Approach__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Release__c</columns>
        <columns>Solution_Lead__c</columns>
        <columns>Sandbox_Environment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Release__c</field>
            <operation>equals</operation>
            <value>Winter 13</value>
        </filters>
        <label>All_Winter_13</label>
    </listViews>
    <nameField>
        <displayFormat>FRS-{000000}</displayFormat>
        <label>Business Solution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Solutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>